--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@chakra-ui/core": "^0.8.0",
     "@chakra-ui/react": "^1.7.2",
-    "@emotion/react": "^11.7.0",
-    "@emotion/styled": "^11.6.0",
-    "framer-motion": "^5.4.1",
+    "@emotion/react": "11",
+    "@emotion/styled": "11",
+    "apexcharts": "^3.32.0",
+    "framer-motion": "4",
     "next": "12.0.7",
     "react": "17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
@@ -22,6 +24,7 @@
     "@types/react": "^17.0.37",
     "eslint": "8.4.0",
     "eslint-config-next": "12.0.7",
+    "react-icons": "^4.3.1",
     "typescript": "^4.5.2"
   }
 }
