--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.27.0",
+    "react-query": "^3.34.16",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/faker": "^6.6.9",
     "@types/node": "^16.11.11",
     "@types/react": "^17.0.37",
     "eslint": "8.4.0",
     "eslint-config-next": "12.0.7",
+    "faker": "5.5.3",
     "miragejs": "^0.1.43",
     "react-icons": "^4.3.1",
     "typescript": "^4.5.2"
