--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "11",
     "@hookform/resolvers": "^2.8.8",
     "apexcharts": "^3.32.0",
+    "axios": "^0.26.0",
     "framer-motion": "4",
     "next": "12.0.7",
     "react": "17.0.2",
